tests/compile_fail/sharp_val_span.stderr
error[E0614]: type `u32` cannot be dereferenced
 --> $DIR/sharp_val_span.rs:8:19
  |
8 |     #[strategy(0..*#x)]
  |                   ^^^
